Fixing height on mobile + moving the logo + adding button to select power.

--- a/santorini.css
+++ b/santorini.css
@@ -32,9 +32,10 @@ html {
   outline: none;
   position:fixed;
   top:0;
+  left:0;
   z-index:1;
   width:100%;
-  height:100%;
+  height:100vh;
 }
 
 #scene-container canvas {
